--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 			<version>2.9.2</version>
 		</dependency>
 	</dependencies>
+			<distributionManagement>
+  <snapshotRepository>
+    <id>nexus</id>
+    <url>http://13.233.164.239:8081/nexus/content/repositories/nexus/</url>
+  </snapshotRepository>
+</distributionManagement>
 
 	<build>
 		<plugins>
