--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=13.233.164.239:3306/retailbanking
+spring.datasource.url=13.233.164.239:3306/ingdb
 spring.datasource.username=inguser1
 spring.datasource.password=H@ckath0n
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
